objects/Territory_Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_4_Territory_Code__c</fullName>
        <label>Level 4 Territory Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_5_Territory_Code__c</fullName>
        <label>Level 5 Territory Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Territory Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Level_4_Territory_Code__c</columns>
        <columns>Level_5_Territory_Code__c</columns>
        <columns>Email_Template_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Territory Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Email Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>